<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/virtual_view_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/virtual_view_1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:text="@string/virtual_screen_1"
                android:layout_marginEnd="4dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/virtual_view_2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:text="@string/virtual_screen_2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/virtual_view_3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:text="@string/virtual_screen_3"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/virtual_view_4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:text="@string/virtual_screen_4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/virtual_view_5"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:text="@string/virtual_screen_5"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/virtual_view_6"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:text="@string/virtual_screen_6"
                style="?android:attr/buttonBarButtonStyle" />


            <Button
                android:id="@+id/virtual_view_7"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:textSize="11sp"
                android:layout_marginEnd="4dp"
                android:text="@string/virtual_screen_7"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>