<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/trip_send_to_cloud_dialog_ask_question" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextEnabled="true"
        app:helperText="@string/trip_upload_tags_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUploadTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_upload_tags_hint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
