<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout android:background="@color/white"
        android:id="@+id/tablelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:textColor="@color/gray_dark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:gravity="start"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:text="@string/trip_vehicle_profile"
                android:textColor="@color/gray_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="start"
                android:text="@string/trip_start_date"
                android:textAllCaps="false"
                android:textColor="@color/gray_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/trip_length"
                android:textColor="@color/gray_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="1dp"
                android:text="@string/trip_action"
                android:textColor="@color/gray_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
             <View
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_weight="2"
                android:background="#FF909090"
                android:padding="2dip" />
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/status_panel"
        android:layout_below="@id/tablelayout" />

    <LinearLayout
        android:id="@+id/status_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/trip_action_close_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/rainbow_indigo"
            android:text="@string/dialog_close_window_action"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/trip_action_upload_to_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/philippine_green"
            android:text="@string/trip_dialog_send_to_cloud_selected"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/trip_action_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardinal"
            android:text="@string/trip_dialog_delete_all_trips"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>

