<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tablelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="0dp"
        android:paddingEnd="2dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingStart="0dp"
            android:paddingEnd="8dp">

            <CheckBox
                android:id="@+id/trip_selected"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:gravity="start"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trip_profile"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:gravity="start"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:text="@string/trip_vehicle_profile"
                android:textColor="@color/gray_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/trip_start_date"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="start"
                android:text="@string/trip_start_date"
                android:textAllCaps="false"
                android:textColor="@color/gray_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/trip_length"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/trip_length"
                android:textColor="@color/gray_light"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/actions_container"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="1dp">

                <Button
                    android:id="@+id/trip_load"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/trip_action_load"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/trip_delete"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:backgroundTint="@color/cardinal"
                    android:gravity="center"
                    android:text="@string/trip_action_delete"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_weight="1"
                android:background="#FF909090"
                android:padding="2dip" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>